--- a/application.yml
+++ b/application.yml
@@ -1,7 +1,7 @@
   
 eureka:
   client:
-    register-with-eureka: true
+    register-with-eureka: false
     fetch-registry: true
     service-url: 
       defaultZone: http://localhost:8761/eureka/
